--- a/app/views/homes/city.html.erb
+++ b/app/views/homes/city.html.erb
@@ -1,4 +1,7 @@
 <div>
-  <%= params["prefecture_code"] %>
-  <%#= Prefecture.where(id[:params]) %>
+  <% params[:prefecture_name] %>
+  <%#= Prefecture.find_by(name: params[:prefecture_name]) %>
+  <% @prefecture.municipalities.each do |muni| %>
+    <%= muni.name %>
+  <% end %>
 </div>
