[start]新規登録、ログイン

--- a/app/views/homes/city.html.erb
+++ b/app/views/homes/city.html.erb
@@ -1,7 +1,14 @@
-<div>
-  <% params[:prefecture_name] %>
-  <%#= Prefecture.find_by(name: params[:prefecture_name]) %>
-  <% @prefecture.cities.each do |city| %>
-    <%= city.name %>
-  <% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      </div>
+      <% params[:prefecture_name] %>
+        <% @prefecture.cities.each do |city| %>
+          <%= link_to  home_sakagura_path(city_id: city.id) do%>
+            <%= city.name %>
+          <% end %>
+        <% end %>
+      <%# end %>
+    </div>
+  </div>
 </div>
