--- a/app/views/menbers/registrations/new.html.erb
+++ b/app/views/menbers/registrations/new.html.erb
@@ -1,29 +1,59 @@
 <h2>新規登録</h2>
 
-<%= form_with(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "menbers/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8">
+        <table>
+          <thead>
+            <tr>
+              <th>名前</th>
+              <th><%= f.text_field :name, nameautofocus: true, autocomplete: "name" %></th>
+              <%# nameautofocusでデータを挿入後次の項目に移動、autocompleteで検索時に名前変換してくれる%>
+            </tr>
+            <tr>
+              <th>メールアドレス</th>
+              <th><%= f.text_field :email, autocomplete: "email" %></th>
+            </tr>
+            <tr>
+              <th>電話番号(ハイフンなし)</th>
+              <th><%= f.text_field :telephone_number, autocomplete: "telephone_number" %></th>
+            </tr>
+            <tr>
+              <th>郵便番号(ハイフンなし)〒</th>
+              <th<%= f.text_field :postal_code, autocomplete: "postal_code" %></th>
+            </tr>
+            <tr>
+              <th>住所</th>
+              <th><%= f.text_field :address, autocomplete: "adderess" %></th>
+            </tr>
+            <tr>
+              <th>
+                パスワード
+                <em>(<%= @minimum_password_length %> 文字以上)</em>
+              </th>
+              <th>
+                <% if @minimum_password_length %>
+                <% end %><br />
+                <%= f.password_field :password, autocomplete: "new-password" %>
+              </th>
+            </tr>
+            <tr>
+              <th>パスワード(確認用)</th>
+              <th><%= f.text_field :password_confirmation, autocomplete: "new-password" %></th>
+            </tr>
+            <tr>
+              <th></th>
+              <th><%= f.submit "新規登録" %></th>    <%# 利用規約を追加するため追加時に遷移させる%>
+            </tr>
+          </thead>
+        </table>
+      </div>
+    </div>
   </div>
 <% end %>
+<h6 class = "title">既に登録済みの方</h6>
+<p><%= link_to 'こちら', menber_session_path %>からログインしてください</p>
 
-<%= render "menbers/shared/links" %>
