--- a/app/views/menbers/registrations/edit.html.erb
+++ b/app/views/menbers/registrations/edit.html.erb
@@ -1,43 +1,67 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>会員編集画面</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "menbers/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8">
+        <table>
+          <thead>
+            <tr>
+              <th>アイコン</th>
+              <th><%= f.attachment_field :profile_image %></th>
+            </tr>
+            <tr>
+              <th>名前</th>
+              <th><%= f.text_field :name, nameautofocus: true, autocomplete: "name" %></th>
+              <%# nameautofocusでデータを挿入後次の項目に移動、autocompleteで検索時に名前変換してくれる%>
+            </tr>
+            <tr>
+              <th>メールアドレス</th>
+              <th><%= f.text_field :email, autocomplete: "email" %></th>
+            </tr>
+            <tr>
+              <th>電話番号(ハイフンなし)</th>
+              <th><%= f.text_field :telephone_number, autocomplete: "telephone_number" %></th>
+            </tr>
+            <tr>
+              <th>郵便番号(ハイフンなし)〒</th>
+              <th><%= f.text_field :postal_code, autocomplete: "postal_code" %></th>
+            </tr>
+            <tr>
+              <th>住所</th>
+              <th><%= f.text_field :address, autocomplete: "adderess" %></th>
+            </tr>
+            <tr>
+              <th>パスワード(変更したくない場合は記述しないでください)</th>
+              <th>
+                <%= f.password_field :password, autocomplete: "new-password" %>
+                <% if @minimum_password_length %>
+                  <br />
+                  <em><%= @minimum_password_length %> characters minimum</em>
+                <% end %>
+              </th>
+            </tr>
+            <tr>
+              <th>パスワード(確認用)</th>
+              <th><%= f.text_field :password_confirmation, autocomplete: "new-password" %></th>
+            </tr>
+            <tr>
+              <th>パスワードを変更する場合は、変更前のパスワードを入力してください</th>
+              <th><%= f.password_field :current_password, autocomplete: "current-password" %></th>
+            </tr>
+            <tr>
+              <th></th>
+              <th><%= f.submit "更新" %></th>    <%# 利用規約を追加するため追加時に遷移させる%>
+            </tr>
+          </thead>
+        </table>
+      </div>
+    </div>
   </div>
 <% end %>
+<!--<h3>Cancel my account</h3>-->
 
-<h3>Cancel my account</h3>
+<!--<p>Unhappy? <#%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>-->
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+<%#= link_to "Back", :back %>
