--- a/app/views/homes/sakagura.html.erb
+++ b/app/views/homes/sakagura.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
+      <%#= @.prefecture.name %>
       <% @sakagura.each do |sakagura| %>
         <%= link_to sakagura.url do %>  <%#@sakaguraのなかにurlのカラムがはいっていて link_toでgoogleにせんいできるようにしたい%>
           <%= sakagura.name %>
