--- a/app/views/menbers/registrations/edit.html.erb
+++ b/app/views/menbers/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <h2>会員編集画面</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<%#3 form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "menbers/shared/error_messages", resource: resource %>
   <div class="container">
     <div class="row">
@@ -59,7 +59,7 @@
       </div>
     </div>
   </div>
-<% end %>
+<%# end %>
 <!--<h3>Cancel my account</h3>-->
 
 <!--<p>Unhappy? <#%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>-->
