--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,15 +1,183 @@
 <div class="container">
   <div class="row">
-    <div class="col-lg-12 row justify-content-center">
+    <div class="col-lg-10 justify-content-center">
       <span class="title">のんべえくんの利用について
       <h2 class="text-center">利用規約</h1>
+      <p>
+        この利用規約（以下，「本規約」といいます。）は、製作者
+        がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。
+        この規約は、「のんべえくん」サービス（以下「本サービス」）をご利用頂く際につき定めるものです。
+        本規約に同意した上で本サービスをご利用ください。
+      </p>
+      <h2>第1条 (適用)</h2>
+      <ol>
+        <li>
+          本規約は，ユーザーと製作者との間の本サービスの利用に関わる一切の関係に適用されるものとします。
+        </li>
+
+        <li>
+          当社は本サービスに関し，本規約のほか，ご利用にあたってのルール等，各種の定め（以下，「個別規定」といいます。）
+          をすることがあります。これら個別規定はその名称のいかんに関わらず，本規約の一部を構成するものとします。
+        </li>
+
+        <li>
+          本規約の規定が前条の個別規定の規定と矛盾する場合には，個別規定において特段の定めなき限り，
+          個別規定の規定が優先されるものとします。
+        </li>
+      </ol>
+      <h2>第2条 (利用登録)</h2>
+      <ol>
+        <li>
+          本サービスにおいては，登録希望者が本規約に同意の上，製作者の定める方法によって利用登録を申請し，当社がこの承認を登録希望者に通知することによって，
+          利用登録が完了するものとします。
+        </li>
+        <!--<li>-->
+        <!--  当社は，利用登録の申請者に以下の事由があると判断した場合，利用登録の申請を承認しないことがあり，-->
+        <!--  その理由については一切の開示義務を負わないものとします。-->
+        <!--  <ol>-->
+        <!--    <li>利用登録の申請に際して虚偽の事項を届け出た場合</li>-->
+        <!--    <li>本規約に違反したことがある者からの申請である場合</li>-->
+        <!--    <li>その他，当社が利用登録を相当でないと判断した場合</li>-->
+        <!--  </ol>-->
+        <!--</li>-->
+      </ol>
+      <h2>第3条  (ユーザID及びパスワード管理)</h2>
+      <ol>
+        <li>
+          ユーザーは，自己の責任において，本サービスのユーザーIDおよびパスワードを適切に管理するものとします。
+        </li>
+        <li>ユーザーは，いかなる場合にも，ユーザーIDおよびパスワードを第三者に譲渡または貸与し，もしくは第三者と共用することはできません。
+          当社は，ユーザーIDとパスワードの組み合わせが登録情報と一致してログインされた場合には，</br>
+          そのユーザーIDを登録しているユーザー自身による利用とみなします。
+        </li>
+        <li>
+          ユーザーID及びパスワードが第三者によって使用されたことによって生じた損害は，製作者に故意な過失がある場合を除き，
+          製作者は一切の責任を負わないものとします。
+        </li>
+      </ol>
+      <h2>第4条  (禁止事項)</h2>
+      <p>ユーザーは，本サービスの利用にあたり，以下の行為をしてはなりません。</p>
+      <ol>
+        <li>法令または公序良俗に違反する行為</li>
+
+        <li>犯罪行為に関連する行為</li>
+
+        <li>製作者，本サービスの他のユーザー，または第三者のサーバーまたはネットワークの機能を破壊したり，妨害したりする行為</li>
+
+        <li>製作者のサービスの運営を妨害するおそれのある行為</li>
+
+        <li>他のユーザーに関する個人情報等を収集または蓄積する行為</li>
+
+        <li>不正アクセスをし，またはこれを試みる行為</li>
+
+        <li>他のユーザーに成りすます行為</li>
+
+        <li>製作者のサービスに関連して，反社会的勢力に対して直接または間接に利益を供与する行為</li>
+
+        <li>製作者，本サービスの他のユーザーまたは第三者の知的財産権，肖像権，プライバシー，名誉その他の権利または利益を侵害する行為</li>
+
+        <li>
+          以下の表現を含み，または含むと当社が判断する内容を本サービス上に投稿し，または送信する行為
+          <ol>
+            <li>過度に暴力的な表現</li>
+
+            <li>露骨な性的表現</li>
+
+            <li>人種，国籍，信条，性別，社会的身分，門地等による差別につながる表現</li>
+
+            <li>自殺，自傷行為，薬物乱用を誘引または助長する表現</li>
+
+            <li>の他反社会的な内容を含み他人に不快感を与える表現</li>
+          </ol>
+        </li>
+
+        <li>
+          以下を目的とし，または目的とすると製作者が判断する行為
+          <ol>
+            <li>営業，宣伝，広告，勧誘，その他営利を目的とする行為</li>
+
+            <li>性行為やわいせつな行為を目的とする行為</li>
+
+            <li>面識のない異性との出会いや交際を目的とする行為</li>
+
+            <li>他のユーザーに対する嫌がらせや誹謗中傷を目的とする行為</li>
+
+            <li>製作者，本サービスの他のユーザー，または第三者に不利益，損害または不快感を与えることを目的とする行為</li>
+
+            <li>その他本サービスが予定している利用目的と異なる目的で本サービスを利用する行為</li>
+          </ol>
+        </li>
+
+        <li>宗教活動または宗教団体への勧誘行為</li>
+
+        <li>その他，製作者が不適切と判断する行為</li>
+      </ol>
+      <h2>第5条  (本サービスの提供停止等)</h2>
+      <ol>
+        <li>
+          製作者は，以下のいずれかの事由があると判断した場合，ユーザーに事前に通知することなく本サービスの全部または
+          一部の提供を停止または中断することができるものとします。
+          <ol>
+            <li>本サービスにかかるコンピュータシステムの保守点検または更新を行う場合</li>
+
+            <li>地震，落雷，火災，停電または天災などの不可抗力により，本サービスの提供が困難となった場合</li>
+
+            <li>コンピュータまたは通信回線等が事故により停止した場合</li>
+
+            <li>その他，製作者が本サービスの提供が困難と判断した場合</li>
+          </ol>
+        </li>
+
+        <li>
+          製作者は，本サービスの提供の停止または中断により，ユーザーまたは第三者が被ったいかなる不利益または損害についても，
+          一切の責任を負わないものとします。
+        </li>
+      </ol>
+      <h2>第6条　(著作権)</h2>
+      <ol>
+        <li>
+          ユーザーは，自ら著作権等の必要な知的財産権を有するか，または必要な権利者の許諾を得た文章，画像や映像等の情報に関してのみ，
+          本サービスを利用し，投稿ないしアップロードすることができるものとします。
+        </li>
+
+        <li>
+          ユーザーは，自ら著作権等の必要な知的財産権を有するか，または必要な権利者の許諾を得た文章，画像や映像等の情報に関してのみ，
+          本サービスを利用し，投稿ないしアップロードすることができるものとします。
+        </li>
+
+        <li>
+          前項本文の定めるものを除き，本サービスおよび本サービスに関連する一切の情報についての著作権およびその他の知的財産権はすべて
+          製作者または製作者にその利用を許諾した権利者に帰属し，ユーザーは無断で複製，譲渡，貸与，翻訳，改変，転載，公衆送信（送信可能化を含みます。），
+          伝送，配布，出版，営業使用等をしてはならないものとします。
+        </li>
+      </ol>
+      <!--<h2>第条  (利用制限および登録抹消)</h2>-->
+      <!--<ol>-->
+      <!--  <li>-->
+      <!--    製作者は，ユーザーが以下のいずれかに該当する場合には，事前の通知なく，投稿データを削除し，ユーザーに対して本サービスの全部もしくは一部の利用を-->
+      <!--    制限しまたはユーザーとしての登録を抹消することができるものとします。-->
+      <!--    <ol>-->
+      <!--      <li>本規約のいずれかの条項に違反した場合</li>-->
+            
+      <!--      <li>登録事項に虚偽の事実があることが判明した場合</li>-->
+            
+      <!--      <li>その他，製作者が本サービスの利用を適当でないと判断した場合</li>-->
+      <!--    </ol>-->
+      <!--  </li>-->
+        
+      <!--  <li>製作者は，本条に基づき当社が行った行為によりユーザーに生じた損害について，一切の責任を負いません。</li>-->
+      <!--</ol>-->
+      <!--<h2>第条　(退会)</h2>-->
+      <!--<p>ユーザーは，製作者の定める退会手続により，本サービスから退会できるものとします。</p>-->
+   　
+      <h2>第7条　(保障の否認及び免責事項)</h2>
+      <ol>  
+   　    <li>
+   　      当社は，本サービスに事実上または法律上の瑕疵（安全性，信頼性，正確性，完全性，有効性，特定の目的への適合性
+   　      ，セキュリティなどに関する欠陥，エラーやバグ，権利侵害などを含みます。）がないことを明示的にも黙示的にも保証しておりません。
+   　    </li>
+      </ol>
     </div>
-  </div>
-  <div class="row justify-content-center">
-    <div class="col-lg-12 row justify-content-center">
-      <p>この規約は、「のんべえくん」サービス（以下「本サービス」）をご利用頂く際につき定めるものです。
-      <p>本規約に同意した上で本サービスをご利用ください。
- 　</div>
   </div>
 </div>
 
