[update]home_about（利用規約文章完成）

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -9,6 +9,7 @@
         この規約は、「のんべえくん」サービス（以下「本サービス」）をご利用頂く際につき定めるものです。
         本規約に同意した上で本サービスをご利用ください。
       </p>
+      
       <h2>第1条 (適用)</h2>
       <ol>
         <li>
@@ -16,7 +17,7 @@
         </li>
 
         <li>
-          当社は本サービスに関し，本規約のほか，ご利用にあたってのルール等，各種の定め（以下，「個別規定」といいます。）
+          製作者は本サービスに関し，本規約のほか，ご利用にあたってのルール等，各種の定め（以下，「個別規定」といいます。）
           をすることがあります。これら個別規定はその名称のいかんに関わらず，本規約の一部を構成するものとします。
         </li>
 
@@ -25,29 +26,31 @@
           個別規定の規定が優先されるものとします。
         </li>
       </ol>
+      
       <h2>第2条 (利用登録)</h2>
       <ol>
         <li>
-          本サービスにおいては，登録希望者が本規約に同意の上，製作者の定める方法によって利用登録を申請し，当社がこの承認を登録希望者に通知することによって，
+          本サービスにおいては，登録希望者が本規約に同意の上，製作者の定める方法によって利用登録を申請し，製作者がこの承認を登録希望者に通知することによって，
           利用登録が完了するものとします。
         </li>
         <!--<li>-->
-        <!--  当社は，利用登録の申請者に以下の事由があると判断した場合，利用登録の申請を承認しないことがあり，-->
+        <!--  製作者は，利用登録の申請者に以下の事由があると判断した場合，利用登録の申請を承認しないことがあり，-->
         <!--  その理由については一切の開示義務を負わないものとします。-->
         <!--  <ol>-->
         <!--    <li>利用登録の申請に際して虚偽の事項を届け出た場合</li>-->
         <!--    <li>本規約に違反したことがある者からの申請である場合</li>-->
-        <!--    <li>その他，当社が利用登録を相当でないと判断した場合</li>-->
+        <!--    <li>その他，製作者が利用登録を相当でないと判断した場合</li>-->
         <!--  </ol>-->
         <!--</li>-->
       </ol>
+      
       <h2>第3条  (ユーザID及びパスワード管理)</h2>
       <ol>
         <li>
           ユーザーは，自己の責任において，本サービスのユーザーIDおよびパスワードを適切に管理するものとします。
         </li>
         <li>ユーザーは，いかなる場合にも，ユーザーIDおよびパスワードを第三者に譲渡または貸与し，もしくは第三者と共用することはできません。
-          当社は，ユーザーIDとパスワードの組み合わせが登録情報と一致してログインされた場合には，</br>
+          製作者は，ユーザーIDとパスワードの組み合わせが登録情報と一致してログインされた場合には，</br>
           そのユーザーIDを登録しているユーザー自身による利用とみなします。
         </li>
         <li>
@@ -55,6 +58,7 @@
           製作者は一切の責任を負わないものとします。
         </li>
       </ol>
+      
       <h2>第4条  (禁止事項)</h2>
       <p>ユーザーは，本サービスの利用にあたり，以下の行為をしてはなりません。</p>
       <ol>
@@ -77,7 +81,7 @@
         <li>製作者，本サービスの他のユーザーまたは第三者の知的財産権，肖像権，プライバシー，名誉その他の権利または利益を侵害する行為</li>
 
         <li>
-          以下の表現を含み，または含むと当社が判断する内容を本サービス上に投稿し，または送信する行為
+          以下の表現を含み，または含むと製作者が判断する内容を本サービス上に投稿し，または送信する行為
           <ol>
             <li>過度に暴力的な表現</li>
 
@@ -112,6 +116,7 @@
 
         <li>その他，製作者が不適切と判断する行為</li>
       </ol>
+      
       <h2>第5条  (本サービスの提供停止等)</h2>
       <ol>
         <li>
@@ -133,7 +138,8 @@
           一切の責任を負わないものとします。
         </li>
       </ol>
-      <h2>第6条　(著作権)</h2>
+      
+      <h2>第6条 (著作権)</h2>
       <ol>
         <li>
           ユーザーは，自ら著作権等の必要な知的財産権を有するか，または必要な権利者の許諾を得た文章，画像や映像等の情報に関してのみ，
@@ -165,17 +171,66 @@
       <!--    </ol>-->
       <!--  </li>-->
         
-      <!--  <li>製作者は，本条に基づき当社が行った行為によりユーザーに生じた損害について，一切の責任を負いません。</li>-->
+      <!--  <li>製作者は，本条に基づき製作者が行った行為によりユーザーに生じた損害について，一切の責任を負いません。</li>-->
       <!--</ol>-->
-      <!--<h2>第条　(退会)</h2>-->
+      <!--<h2>第条 (退会)</h2>-->
       <!--<p>ユーザーは，製作者の定める退会手続により，本サービスから退会できるものとします。</p>-->
-   　
-      <h2>第7条　(保障の否認及び免責事項)</h2>
+    
+      <h2>第7条 (保障の否認及び免責事項)</h2>
       <ol>  
-   　    <li>
-   　      当社は，本サービスに事実上または法律上の瑕疵（安全性，信頼性，正確性，完全性，有効性，特定の目的への適合性
-   　      ，セキュリティなどに関する欠陥，エラーやバグ，権利侵害などを含みます。）がないことを明示的にも黙示的にも保証しておりません。
-   　    </li>
+        <!--<li>-->
+        <!--  製作者は，本サービスに事実上または法律上の瑕疵（安全性，信頼性，正確性，完全性，有効性，特定の目的への適合性,-->
+        <!--  セキュリティなどに関する欠陥，エラーやバグ，権利侵害などを含みます。）がないことを明示的にも黙示的にも保証しておりません。-->
+        <!--</li>-->
+        <li>
+          製作者は，本サービスに起因してユーザーに生じたあらゆる損害について、製作者の故意又は重過失による場合を除き、一切の責任を負いません。
+          ただし，本サービスに関する製作者とユーザーとの間の契約（本規約を含みます。）が消費者契約法に定める消費者契約となる場合，この免責規定は適用されません。
+        </li>
+        <li>
+          製作者は，本サービスに関して，ユーザーと他のユーザーまたは第三者との間において生じた取引，
+          連絡または紛争等について一切責任を負いません。
+        </li>
+      </ol>
+      
+      <h2>第8条　(サービス内容の変更等)</h2>
+      <p>
+        製作者は，本サービスの内容を変更、追加または廃止することがあり、
+        ユーザーはこれを承諾するものとします。
+      </p>
+      
+      <h2>第9条　(利用規約の変更)</h2>
+      <ol>
+        <li>
+          製作者は以下の場合には、ユーザーの個別の同意を要せず、本規約を変更することができるものとします。
+          <ol>
+            <li>本規約の変更がユーザーの一般の利益に適合するとき。</li>
+            
+            <li>
+              本規約の変更が本サービス利用契約の目的に反せず、かつ、変更の必要性、変更後の内容の相当性その他の変更に係る
+              事情に照らして合理的なものであるとき。
+            </li>
+          </ol>
+        </li>
+        <!--<li>-->
+        <!--  製作者はユーザーに対し、前項による本規約の変更にあたり、事前に、本規約を変更する旨及び変更後-->
+        <!--  の本規約の内容並びにその効力発生時期を通知します。-->
+        <!--</li>-->
+      </ol>
+      
+      <h2>第10条　(個人情報の取扱い)</h2>
+      <p>製作者は，本サービスの利用によって取得する個人情報については，製作者「プライバシーポリシー」に従い適切に取り扱うものとします。</p>
+      
+      <h2>第11条　(権利義務の譲渡の禁止)</h2>
+      <p>
+        ユーザーは，製作者の書面による事前の承諾なく，利用契約上の地位または本規約に基づく権利もしくは義務を第三者に
+      　譲渡することはできません。
+      </p>
+      
+      <h2>第12条　(準拠法・裁判管轄)</h2>
+      <ol>
+        <li>本規約の解釈にあたっては，日本法を準拠法とします。</li>
+        
+        <li>本サービスに関して紛争が生じた場合には，製作者を管轄する裁判所を専属的合意管轄とします。</li>　<%# 専属的合意管轄はもちろん設定出来てない%>
       </ol>
     </div>
   </div>
