[update]home_about(文章に不備があり更新)

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -9,7 +9,7 @@
         この規約は、「のんべえくん」サービス（以下「本サービス」）をご利用頂く際につき定めるものです。
         本規約に同意した上で本サービスをご利用ください。
       </p>
-      
+
       <h2>第1条 (適用)</h2>
       <ol>
         <li>
@@ -26,7 +26,7 @@
           個別規定の規定が優先されるものとします。
         </li>
       </ol>
-      
+
       <h2>第2条 (利用登録)</h2>
       <ol>
         <li>
@@ -43,7 +43,7 @@
         <!--  </ol>-->
         <!--</li>-->
       </ol>
-      
+
       <h2>第3条  (ユーザID及びパスワード管理)</h2>
       <ol>
         <li>
@@ -58,7 +58,7 @@
           製作者は一切の責任を負わないものとします。
         </li>
       </ol>
-      
+
       <h2>第4条  (禁止事項)</h2>
       <p>ユーザーは，本サービスの利用にあたり，以下の行為をしてはなりません。</p>
       <ol>
@@ -66,7 +66,10 @@
 
         <li>犯罪行為に関連する行為</li>
 
-        <li>製作者，本サービスの他のユーザー，または第三者のサーバーまたはネットワークの機能を破壊したり，妨害したりする行為</li>
+        <li>
+          製作者，本サービスの他のユーザー，または第三者のサーバーまたはネットワークの機能を破壊したり，</br>
+          妨害したりする行為
+        </li>
 
         <li>製作者のサービスの運営を妨害するおそれのある行為</li>
 
@@ -116,7 +119,7 @@
 
         <li>その他，製作者が不適切と判断する行為</li>
       </ol>
-      
+
       <h2>第5条  (本サービスの提供停止等)</h2>
       <ol>
         <li>
@@ -138,7 +141,7 @@
           一切の責任を負わないものとします。
         </li>
       </ol>
-      
+
       <h2>第6条 (著作権)</h2>
       <ol>
         <li>
@@ -164,20 +167,20 @@
       <!--    制限しまたはユーザーとしての登録を抹消することができるものとします。-->
       <!--    <ol>-->
       <!--      <li>本規約のいずれかの条項に違反した場合</li>-->
-            
+
       <!--      <li>登録事項に虚偽の事実があることが判明した場合</li>-->
-            
+
       <!--      <li>その他，製作者が本サービスの利用を適当でないと判断した場合</li>-->
       <!--    </ol>-->
       <!--  </li>-->
-        
+
       <!--  <li>製作者は，本条に基づき製作者が行った行為によりユーザーに生じた損害について，一切の責任を負いません。</li>-->
       <!--</ol>-->
       <!--<h2>第条 (退会)</h2>-->
       <!--<p>ユーザーは，製作者の定める退会手続により，本サービスから退会できるものとします。</p>-->
-    
+
       <h2>第7条 (保障の否認及び免責事項)</h2>
-      <ol>  
+      <ol>
         <!--<li>-->
         <!--  製作者は，本サービスに事実上または法律上の瑕疵（安全性，信頼性，正確性，完全性，有効性，特定の目的への適合性,-->
         <!--  セキュリティなどに関する欠陥，エラーやバグ，権利侵害などを含みます。）がないことを明示的にも黙示的にも保証しておりません。-->
@@ -191,20 +194,20 @@
           連絡または紛争等について一切責任を負いません。
         </li>
       </ol>
-      
+
       <h2>第8条　(サービス内容の変更等)</h2>
       <p>
         製作者は，本サービスの内容を変更、追加または廃止することがあり、
         ユーザーはこれを承諾するものとします。
       </p>
-      
+
       <h2>第9条　(利用規約の変更)</h2>
       <ol>
         <li>
           製作者は以下の場合には、ユーザーの個別の同意を要せず、本規約を変更することができるものとします。
           <ol>
             <li>本規約の変更がユーザーの一般の利益に適合するとき。</li>
-            
+
             <li>
               本規約の変更が本サービス利用契約の目的に反せず、かつ、変更の必要性、変更後の内容の相当性その他の変更に係る
               事情に照らして合理的なものであるとき。
@@ -216,20 +219,20 @@
         <!--  の本規約の内容並びにその効力発生時期を通知します。-->
         <!--</li>-->
       </ol>
-      
+
       <h2>第10条　(個人情報の取扱い)</h2>
       <p>製作者は，本サービスの利用によって取得する個人情報については，製作者「プライバシーポリシー」に従い適切に取り扱うものとします。</p>
-      
+
       <h2>第11条　(権利義務の譲渡の禁止)</h2>
       <p>
         ユーザーは，製作者の書面による事前の承諾なく，利用契約上の地位または本規約に基づく権利もしくは義務を第三者に
       　譲渡することはできません。
       </p>
-      
+
       <h2>第12条　(準拠法・裁判管轄)</h2>
       <ol>
         <li>本規約の解釈にあたっては，日本法を準拠法とします。</li>
-        
+
         <li>本サービスに関して紛争が生じた場合には，製作者を管轄する裁判所を専属的合意管轄とします。</li>　<%# 専属的合意管轄はもちろん設定出来てない%>
       </ol>
     </div>
