[update]マイぺージ(menber)更新, [add]投稿部分テンプレート追加

--- a/app/views/menbers/registrations/new.html.erb
+++ b/app/views/menbers/registrations/new.html.erb
@@ -23,7 +23,7 @@
             </tr>
             <tr>
               <th>郵便番号(ハイフンなし)〒</th>
-              <th<%= f.text_field :postal_code, autocomplete: "postal_code" %></th>
+              <th><%= f.text_field :postal_code, autocomplete: "postal_code" %></th>
             </tr>
             <tr>
               <th>住所</th>
