--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <% if menber_signed_in? %>
         <tr>
           <th><%= link_to 'TOP', root_path %></th>
-          <th><%= link_to 'マイページ', edit_menber_registration_path %></th>
+          <th><%= link_to 'マイページ', menber_path(current_menber) %></th>
           <th><%= link_to '投稿', new_post_path %></th>
           <th>検索</th>
           <th><%= link_to 'ログアウト', destroy_menber_session_path, method: :delete %></th>
