[update]postのview,controller, menberのcontroller,view 更新

--- a/app/views/menbers/show.html.erb
+++ b/app/views/menbers/show.html.erb
@@ -19,6 +19,7 @@
           </thead>
         </table>
         <p><%= link_to "個人設定", edit_menber_path(current_menber) %></p>
+        <p><%= link_to "each", posts_path(current_menber)%></p>
       </div>
     </div>
     <div class="row">
