--- a/app/views/posts/_common.html.erb
+++ b/app/views/posts/_common.html.erb
@@ -1,22 +1,22 @@
 <div class="title">
-    <%= f.label :name, '銘柄' %>
-    <%= f.text_field :name %>
+    <%= post.label :name, '銘柄' %>
+    <%= post.text_postield :name %>
   </div>
   <div class="category">
-    <%= f.label :kaori, '香り' %>
-    <%= f.select :kaori, *[0..5] %>
+    <%= post.label :kaori, '香り' %>
+    <%= post.select :kaori, *[0..5] %>
 
-    <%= f.label :karasa, '辛さ' %>
-    <%= f.select :karasa, *[0..5] %>
+    <%= post.label :karasa, '辛さ' %>
+    <%= post.select :karasa, *[0..5] %>
 
-    <%= f.label :nomigotae, 'のみごたえ' %>
-    <%= f.select :nomigotae, *[0..5] %>
+    <%= post.label :nomigotae, 'のみごたえ' %>
+    <%= post.select :nomigotae, *[0..5] %>
 
-    <%= f.label :rarity, 'レア度' %>
-    <%= f.select :rarity, *[0..5] %>
+    <%= post.label :rarity, 'レア度' %>
+    <%= post.select :rarity, *[0..5] %>
 
-    <%= f.label :beginner, '初心者向け' %>
-    <%= f.select :beginner, *[0..5] %>
+    <%= post.label :beginner, '初心者向け' %>
+    <%= post.select :beginner, *[0..5] %>
   </div>
 
   <canvas id="myChart"></canvas>
@@ -24,7 +24,7 @@
   <!-- グラフ導入-->
   <script>
   sakegurahu();  <%# 下の行の定義してる  sakegurahu  を表示出させる指示  %>
-  function sakegurahu() {  <%# rails で例えると＝controller内のdefと同じ意味合い %>
+  postunction sakegurahu() {  <%# rails で例えると＝controller内のdepostと同じ意味合い %>
     var ctx = document.getElementById("myChart");
      var kaori = document.getElementById("post_kaori").value;   <%# "post_kaori"の数字のデータを取得 %>
      var karasa = document.getElementById("post_karasa").value;    //.valueはid指定した中身のカラムだけ抜き取る
@@ -56,10 +56,10 @@
     }
   });
   };
-  $('#post_kaori, #post_karasa, #post_nomigotae, #post_rarity, #post_beginner').change(function() {
-    <%#  id取得('#post_kaori')したらデータを更新、変更change(function() { %>
+  $('#post_kaori, #post_karasa, #post_nomigotae, #post_rarity, #post_beginner').change(postunction() {
+    <%#  id取得('#post_kaori')したらデータを更新、変更change(postunction() { %>
   sakegurahu();
-    <%#  定義されてるグラフを表示{(上の行の更新、変更後に表示させてグラフをupdateしてる)、(function sakegurahu() {   定義してるグラフを呼び出してる) %>
+    <%#  定義されてるグラフを表示{(上の行の更新、変更後に表示させてグラフをupdateしてる)、(postunction sakegurahu() {   定義してるグラフを呼び出してる) %>
   });
 
   </script>
@@ -67,18 +67,18 @@
 </div>
 <div class="col-lg-6">
   <div class="tag">
-    <%= f.text_field :tag_name, placeholder: "タグ付けをする場合は入力してください" %>
+    <%= post.text_postield :tag_name, placeholder: "タグ付けをする場合は入力してください" %>
   </div>
-  <div class="image_field">
-    <%= f.attachment_field :post_images_images, multiple: true %>
-    <%# 複数投稿  attachment_fieldを使う場合  %>
+  <div class="image_postield">
+    <%= post.attachment_postield :post_images_images, multiple: true %>
+    <%# 複数投稿  attachment_postieldを使う場合  %>
     <%# 例）今回の場合だと　　postモデルとアソシエーション関係の画像モデル_ カラム, multiple（多数）: true＜必須＞　%>
     <%#                                   post_image                      _  image,  multiple       :true　%>
   </div>
   <div class=thoughts_area>
-    <%= f.text_area :thoughts, id: "post_text", placeholder: "投稿内容を入力", rows: 10%><%# placeholder ー 記述部分内に文字を反映させる、rows ー 記述部分の行数%>
+    <%= post.text_area :thoughts, id: "post_text", placeholder: "投稿内容を入力", rows: 10%><%# placeholder ー 記述部分内に文字を反映させる、rows ー 記述部分の行数%>
   </div>
 </div>
 </div>
 <div class="row">
-<div class="form_area__action">
+<div class="postorm_area__action">
