--- a/app/views/menbers/mypage.html.erb
+++ b/app/views/menbers/mypage.html.erb
@@ -19,17 +19,16 @@
           </thead>
         </table>
         <p><%= link_to "個人設定", edit_menber_path(current_menber) %></p>
-        <p><%= link_to "each", posts_path(current_menber)%></p>
       </div>
     </div>
     <div class="row">
-      <div class="col-12-flex flex-lg-wrap" >
-        <% @posts.each do |post| %>
-          <%= link_to(post_path(post), class: 'list-content') do %>
-            <p><%= attachment_image_tag post, :image_id, :fill, 100, 100 %> </p>
+      <% @post_images.each do |post_image| %>
+        <div class="col-12-flex flex-lg-wrap">
+          <%= link_to post_path(post_image), class: 'list-content' do %>
+            <p><%= attachment_image_tag post_image, :image, :fill, 100, 100 %></p>
           <% end %>
-        <% end %>
-      </div>
+        </div>
+      <% end %>
     </div>
   </div>
     <!--<div class ="row">-->
