--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -73,10 +73,9 @@
         <%#= f.text_field :tag_name, placeholder: "タグ付けをする場合は入力してください" %>
       </div>
       <div class="image_field">
-        <%= attachment_image_tag  @post, :image_id, :fill, 60, 40, multiple: true %>
-        <%# 複数投稿  attachment_fieldを使う場合  %>
-        <%# 例）今回の場合だと　　postモデルとアソシエーション関係の画像モデル_ カラム, multiple（多数）: true＜必須＞　%>
-        <%#                                   post_image                      _  image,  multiple       :true　%>
+        <% @post_images.each do |post_image| %>
+          <%= attachment_image_tag post_image, :image, :fill, 150, 150 %>
+        <% end %>
       </div>
       <div style="border: outset">
         <%= @post.thoughts %><%# placeholder ー 記述部分内に文字を反映させる、rows ー 記述部分の行数%>
