--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,14 @@
           <th><%= link_to 'TOP', root_path %></th>
           <th><%= link_to 'マイページ', mypage_path(current_menber) %></th>
           <th><%= link_to '投稿', new_post_path %></th>
-          <th><%= link_to '検索', searches_top_path %></th>
+          <th><%= link_to '検索', posts_search_path %></th>
           <th><%= link_to 'ログアウト', destroy_menber_session_path, method: :delete %></th>
+          <th>
+            <%= form_with url:posts_result_path, method: :get, local: :true do |f| %>
+              <%= f.text_field :word %>
+              <%= f.submit "検索" %>
+            <% end %>
+          </th>
         </tr>
       <% else %>
         <tr>
