--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -84,7 +84,25 @@
   </div>
   <div class="row">
     <div class="col-lg-12">
-      <%= link_to "編集", edit_post_path(@post) %><%= link_to "消去", post_path(@post), method: :delete %>
+      <% if current_menber %>
+        <%= link_to "編集", edit_post_path(@post) %><%= link_to "消去", post_path(@post), method: :delete %>
+      <% end %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-12">
+      <%= form_with model:@comment, url:post_comments_path(@post), method: :post, local:true do |f| %>
+      <%# routesの中でネストを組むと親側にidを付けないとエラーが発生する　%>
+        <%= f.text_field :comment_comment %>
+        <%= f.submit '投稿' %>
+      <% end %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-12">
+      <% @comments.each do |comment| %>
+        <%= comment.comment_comment %>
+      <% end %>
     </div>
   </div>
 </div>
