[update]検索機能view 追

--- a/app/views/menbers/mypage.html.erb
+++ b/app/views/menbers/mypage.html.erb
@@ -24,10 +24,11 @@
     <div class="row">
       <% @posts.each do |post| %>
         <% if post.post_images.exists? %>
-          <% post_image = post.post_images.first %>   
-          <div class="col-12-flex flex-lg-wrap">
+        <%# exists? 存在するかどうかを真偽値で返すメソッド(存在すればtrueを存在しなければfalse)%>
+          <% post_image = post.post_images.first %>
+          <div class="col-12-flex flex-lg-wrap">  <%# この部分を　col-4~ にして画像をcolにあてはめたい　%>
             <%= link_to post_path(post_image), class: 'list-content' do %>
-              <p><%= attachment_image_tag post_image, :image, :fill, 100, 100 %></p>
+              <p><%= attachment_image_tag post_image, :image, :fill, 200, 200 %></p>
             <% end %>
           </div>
         <% end %>
